<resources>
    <string name="app_name">Editing Together</string>
    <string name="username">Login</string>
    <string name="password">Mot de passe</string>
    <string name="connection">"Connexion "</string>
    <string name="register">Inscription</string>
    <string name="projects">projets</string>
    <string name="snippets">snippets</string>
    <string name="button_for_compilation">Button for compilation</string>
    <string name="compilation_result">Résultat de la compilation</string>
    <string name="redundancy_result">Résultat de la redoncance</string>
    <string name="group_users">Utilisateurs du groupe</string>
    <string name="lancement_du_projet">Lancement du projet</string>
    <string name="code_analysis">Analyse de code</string>
    <string name="project_name">Nom du projet</string>
    <string name="check_all">Tout cocher</string>
    <string name="uncheck_all">Tout décocher</string>
    <string name="error">Erreur</string>
    <string name="close">Fermer</string>
    <string name="bad_credentials">Login ou mot de passe incorrect</string>
</resources>