<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/snippet_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:fontFamily="@font/stracruiser_italic"
        android:text="@string/snippets"
        android:textAlignment="center"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/title_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/compileButton"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/compileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/green_start"
        app:layout_constraintStart_toEndOf="@+id/snippet_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/snippet_swipe_container"
        android:contentDescription="@string/button_for_compilation">

    </ImageView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/snippet_swipe_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/snippet_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/snippets_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_creen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading_background"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/loader"
            android:text="@string/lancement_du_projet"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            android:fontFamily="@font/stracruiser_italic"
            android:textColor="@color/PrimaryColor"
            />
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loader"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/progressBarStyleLarge"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>