<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_input_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_input_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inputs_hl_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttons_hl_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@id/inputs_hl_gl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_with_name"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/password_cl"
        app:layout_constraintEnd_toStartOf="@id/end_input_gl"
        app:layout_constraintStart_toEndOf="@id/start_input_gl"
        app:layout_constraintTop_toBottomOf="@+id/inputs_hl_gl">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:theme="@style/TextInputColor"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/asap_semi_bold"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttons_hl_gl"
        app:layout_constraintEnd_toStartOf="@id/end_input_gl"
        app:layout_constraintStart_toEndOf="@id/start_input_gl"
        app:layout_constraintTop_toBottomOf="@+id/login_cl">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="clear_text"
            android:theme="@style/TextInputColor"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:fontFamily="@font/asap_semi_bold"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_bad_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_cl"
        app:layout_constraintStart_toStartOf="@id/start_input_gl"
        app:layout_constraintEnd_toEndOf="@id/end_input_gl"
        android:textColor="@color/uncheckAllColor"
        android:text="@string/bad_credentials"
        android:visibility="invisible"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:fontFamily="@font/asap_semi_bold"

        style="@style/Widget.App.ButtonStyle"
        app:layout_constraintEnd_toStartOf="@+id/end_input_gl"
        app:layout_constraintStart_toStartOf="@+id/start_input_gl"
        app:layout_constraintTop_toBottomOf="@id/buttons_hl_gl">

    </com.google.android.material.button.MaterialButton>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading_background"
        android:visibility="invisible"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="15dp"
            android:background="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/asap_semi_bold"
                    android:textColor="@color/uncheckAllColor"
                    />
                <TextView
                    android:id="@+id/tv_display_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/close_error_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/fourthColor"
                    android:textSize="16sp"
                    />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>